--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ lsh
 /20CS3506 - MP.R. Mini Project Report
 /src
 20CS3506 - MP.R. Report/20CS3506 - MP.R.1. OS Mini Project Report.docx
+20CS3506 - MP.R. Report/20CS3506 - MP.R.2. OS Mini Project Report.pdf
+20CS3506 - MP.R. Report/20CS3506 - MP.R.I. Images
